--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,5 +22,6 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rusqlite = "0.33.0"
+rusqlite = { version = "0.33.0", features = ["bundled"] }
+chrono = "0.4.39"
 
