--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,4 +24,5 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
 chrono = "0.4.39"
+dirs = "6.0.0"
 
