--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,6 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 rusqlite = { version = "0.33.0", features = ["bundled"] }
-chrono = "0.4.39"
+chrono = { version = "0.4.39", features = ["serde"] }
 dirs = "6.0.0"
 
